# eswm

./: .gitignore  AUTHORS  COMPOSITOR  NEWS  README.md  autoclean.sh  autogen.sh  configure.ac.in  example.gtkrc-2.0
common/: Makefile.am  eswm-common.c  eswm-common.h
defaults/: defaults
helper-dialog/: Makefile.am  helper-dialog.c
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
po/: POTFILES.in  am.po  ar.po  ast.po  be.po  be@tarask.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  eswm1.pot  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  (+28 more)
settings-dialogs/: Makefile.am  eswm1-dialog.glade  eswm1-settings.c  eswm1-settings.h  eswm1-tweaks-dialog.glade  eswm1-workspace-dialog.glade  expidus-wm-settings.desktop.in  expidus-wmtweaks-settings.desktop.in  expidus-workspaces-settings.desktop.in  tweaks-settings.c  workspace-settings.c  workspace.gresource.xml  xfce-wm-settings.desktop.in  xfce-wmtweaks-settings.desktop.in  xfce-workspaces-settings.desktop.in
src/: Makefile.am  client.c  client.h  compositor.c  compositor.h  cycle.c  cycle.h  device.c  device.h  display.c  display.h  event_filter.c  event_filter.h  events.c  events.h  focus.c  focus.h  frame.c  frame.h  hints.c  hints.h  icons.c  icons.h  keyboard.c  keyboard.h  main.c  menu.c  menu.h  misc.c  misc.h  moveresize.c  moveresize.h  mypixmap.c  mypixmap.h  mywindow.c  mywindow.h  netwm.c  netwm.h  parserc.c  parserc.h  (+30 more)
themes/daloa/: Makefile.am  README
themes/default/: Makefile.am  README
themes/default-hdpi/: Makefile.am  README
themes/default-xhdpi/: Makefile.am
themes/kokodi/: Makefile.am  README
themes/moheli/: Makefile.am  README
