actionsiconsdir = $(datadir)/icons/hicolor/22x22/actions
actionsicons_DATA =								\
	expidus-wm-close.png						\
	expidus-wm-maximize.png						\
	expidus-wm-menu.png						\
	expidus-wm-minimize.png						\
	expidus-wm-shade.png						\
	expidus-wm-stick.png						\
	expidus-wm-unmaximize.png						\
	expidus-wm-unshade.png						\
	expidus-wm-unstick.png
	

EXTRA_DIST = $(actionsicons_DATA)
