appiconsdir = $(datadir)/icons/hicolor/scalable/apps
appicons_DATA =								\
	com.expidus.eswm1-tweaks.svg							\
	com.expidus.workspaces.svg						\
	com.expidus.eswm1.svg							\
	eswm1-default.svg

actionsiconsdir = $(datadir)/icons/hicolor/scalable/actions
actionsicons_DATA =							\
	expidus-wm-close.svg						\
	expidus-wm-maximize.svg						\
	expidus-wm-menu.svg						\
	expidus-wm-minimize.svg						\
	expidus-wm-shade.svg						\
	expidus-wm-stick.svg						\
	expidus-wm-unmaximize.svg						\
	expidus-wm-unshade.svg						\
	expidus-wm-unstick.svg

EXTRA_DIST = $(appicons_DATA) $(actionsicons_DATA)
